# lyirc

./: CMakeLists.txt  README.md
cmake/: RagelConfig.cmake
lib/: CMakeLists.txt
lib/asio-1.10.8/: CMakeLists.txt
src/: CMakeLists.txt  app.cpp  app_thread.cpp  app_thread.h  proto.rl
src/gui/: lyirc.fbp  main_frame.cpp  main_frame.h  main_frame_base.cpp  main_frame_base.h
src/view/: main_view.cpp  main_view.h
